2000-11-22  Earnie Boyd  <earnie_boyd@yahoo.com>

	* Makefile.in: Fix bindist target to distribute the correct files.
	Remove the use of SNAPSHOT variable and test SNAPDATE instead.
	Set SNAPDATE within the snapshot target on recursive call to $(MAKE).

2000-11-21  Earnie Boyd  <earnie_boyd@yahoo.com>

	* Makefile.in: Add missing line continuation `\' for $(SUBDIRS) target.
	Add variables and targets to control binary and source distributions.
	Add variables and targets to control snapshot distribution.
	* profile/gmon.h: Add missing #endif for #ifndef.
	* profile/ChangeLog: Merge entries here and remove.
	* profile/Makefile.in: Add variables and targets to control 
	distribution.
	* README: Add.
	* TODO: ditto.
	* config.guess: ditto.
	* config.sub: ditto.
	* mkinstalldirs: ditto.
	* install-sh: ditto.
	* configure: regenerate.
	* profile/configure: ditto.

2000-11-20  Earnie Boyd  <earnie_boyd@yahoo.com>

	* Merge in changes from
	2000-10-23  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	* include/direct.h: add guard around MSVCRT-only prototytpes
	* include/io.h: add __int64 struct definitions and function prototypes;
		 add guard for MSVCRT-only prototypes
	* include/limits.h: add ISO C9x macros LLONG_MIN, LLONG_MAX, ULLONG_MAX
	* include/stdio.h: add wchar function prototypes (__MSVCRT__);
		 put wchar functions together to make sync with wchar.h easier
	* include/stdlib.h: add wide char functions (__MSVCRT__)
	* include/string.h: add string collation functions ( __MSVCRT__)
	* include/sys/stat.h: add __int64 struct and function ( __MSVCRT__)
	* include/tchar.h: add macros and macro function definitions
	* include/wchar.h: add wide char function prototypes ( __MSVCRT__ );
		enclose more functions in __MSVCRT__ guard;
		some oldname wide char function prototypes #if (0)'d
	* profile/gmon.h: add guard around BSD-ish typedefs

Mon Nov 20 18:58:12 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use a different variable name for subdirectory since the